# two-brain-audit

./: .gitignore  .two-brain-audit.json  CHANGELOG.md  LICENSE  README.md  audit_self.py  launch.bat  pyproject.toml  run_demo.py  self_baseline.json
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  QUICKSTART.md  STANDARDS.md
docs/superpowers/plans/: 2026-04-02-tbr-v1-plan.md
examples/biged/: __init__.py  dimensions.py
examples/snapshots/: self_audit_example.json
integrations/: __init__.py  ollama.py  pypi.py  semgrep.py
presets/: __init__.py  api_service.py  database.py  infrastructure.py  python_project.py
src/scorerift/: __init__.py  __main__.py  app.py  claims.py  cli.py  db.py  engine.py  feedback.py  grades.py  ray_trace.py  reconciler.py  sanitizer.py  sidecar.py  snapshot.py  tiers.py
src/scorerift/dashboard/: __init__.py  ui.py
src/scorerift/exporters/: __init__.py  csv_export.py  json_export.py  markdown_export.py
src/scorerift/integrations/: __init__.py  github.py  ollama.py  pypi.py  semgrep.py
src/scorerift/presets/: __init__.py  _check_utils.py  api_service.py  database.py  infrastructure.py  interaction_graphs.py  ml_pipeline.py  python_project.py
src/scorerift/reviewers/: __init__.py  budget.py  cache.py  consensus.py  oss_review.py  providers.py
src/two_brain_audit/: __init__.py  __main__.py  app.py  claims.py  cli.py  db.py  engine.py  feedback.py  reconciler.py  sanitizer.py  sidecar.py  snapshot.py
src/two_brain_audit/dashboard/: __init__.py  ui.py
src/two_brain_audit/exporters/: __init__.py  csv_export.py  json_export.py  markdown_export.py
src/two_brain_audit/integrations/: __init__.py  github.py  ollama.py  pypi.py  semgrep.py
src/two_brain_audit/presets/: __init__.py  ml_pipeline.py  python_project.py
src/two_brain_audit/reviewers/: __init__.py  budget.py  cache.py  consensus.py  oss_review.py  providers.py
tests/: test_cli.py  test_dashboard.py  test_db.py  test_engine.py  test_exporters.py  test_feedback.py  test_grades.py  test_integrations.py  test_presets.py  test_ray_trace.py  test_reconciler.py  test_reviewers.py  test_sidecar.py  test_tiers.py
