[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "two-brain-audit"
version = "0.1.0"
description = "Dual-layer audit system combining automated scoring (left brain) with manual qualitative grading (right brain) and reconciliation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Max" },
]
keywords = ["audit", "scoring", "quality", "reconciliation", "grading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
dashboard = ["flask>=3.0"]
github = ["httpx>=0.27"]
semgrep = ["semgrep>=1.60"]
llm = ["httpx>=0.27"]
all = ["two-brain-audit[dashboard,github,semgrep,llm]"]
dev = [
    "two-brain-audit[all]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
two-brain-audit = "two_brain_audit.cli:main"

[project.urls]
Homepage = "https://github.com/maxtheman/two-brain-audit"
Repository = "https://github.com/maxtheman/two-brain-audit"
Issues = "https://github.com/maxtheman/two-brain-audit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/two_brain_audit"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "SIM", "TCH"]
ignore = ["S101"]  # assert in tests is fine

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
