[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scorerift"
version = "2.0.0"
description = "Dual-layer scoring framework combining automated checks (left brain) with manual qualitative grading (right brain) and reconciliation."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Max" },
]
keywords = ["scoring", "quality", "reconciliation", "grading", "framework"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
dashboard = ["flask>=3.0"]
native = ["flask>=3.0", "pywebview>=5.0"]
github = ["httpx>=0.27"]
semgrep = ["semgrep>=1.60"]
llm = ["httpx>=0.27"]
all = ["scorerift[dashboard,native,github,semgrep,llm]"]
dev = [
    "scorerift[all]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
scorerift = "scorerift.cli:main"

[project.urls]
Homepage = "https://github.com/SwiftWing21/scorerift"
Repository = "https://github.com/SwiftWing21/scorerift"
Issues = "https://github.com/SwiftWing21/scorerift/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scorerift"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "SIM", "TCH"]
ignore = ["S101"]  # assert in tests is fine

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
